@@ -9,9 +9,17 @@
     * New file versions are: MuldisD.pm 0.19.0 and Core.pod 0.17.0.  The
     other pre-existing versioned files are unchanged.
 
+    * (MuldisD.pm)  Added new main pod section VERSIONING which explains
+    the fully-qualified name formats of Muldis D variants in a generic
+    manner, so to help make the Muldis D code more future-proof.  Updated
+    the related DESCRIPTION paragraph.
+
+    TODO:  Strip out now-superfluous versioning stuff in PerlHosted et al,
+    and rename Grammar,PerlHosted,Hierarchical into ::Dialect namespace.
+
     * (Core.pod)  Added 3 new functions sys.Core.Maybe.(nothing|just|attr)
-    where the first 2 will select a Nothing or Just value respectively,
-    and the last one will extract the payload of a known-Just value.
+    where the first 2 will select a Nothing or Just value respectively, and
+    the last one will extract the payload of a known-Just value.
 
     * (Core.pod)  Other minor updates.
 
